--- a/android/ijkplayer/gradle.properties
+++ b/android/ijkplayer/gradle.properties
@@ -19,7 +19,7 @@
 
 VERSION_NAME=0.6.2
 VERSION_CODE=602000
-GROUP=tv.danmaku.ijk.media
+GROUP=com.mcxiaoke.ijk.media
 
 # http://central.sonatype.org/pages/requirements.html
 POM_DESCRIPTION=Video player based on FFmpeg n2.8
