--- a/android/ijkplayer/ijkplayer-x86_64/src/main/AndroidManifest.xml
+++ b/android/ijkplayer/ijkplayer-x86_64/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ijkplayer_x86_64">
+    package="tv.danmaku.ijk.media.ijkplayer_x86_64">
 
     <uses-sdk
-        android:minSdkVersion="21" />
+        android:minSdkVersion="15" />
 
 </manifest>
